--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
+    "angular-cli": "^1.0.0-beta.28.3",
     "angular-in-memory-web-api": "~0.2.1",
     "core-js": "^2.4.1",
     "jquery": "3.1.1",
     "jquery-form": "3.50.0",
     "ng2-file-upload": "^1.2.0",
+    "ng2-pdf-viewer": "^1.0.2",
+    "pdfjs-dist": "^1.7.365",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.1",
     "swiper": "3.4.1",
@@ -38,6 +41,7 @@
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
+    "npm-cli": "0.1.0",
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
     "typescript": "~2.0.10",
