--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@angular/router": "~3.4.0",
     "angular-cli": "^1.0.0-beta.28.3",
     "angular-in-memory-web-api": "~0.2.1",
+    "browser-sync": "^2.18.8",
+    "browser-sync-ui": "^0.6.3",
+    "chokidar": "^1.6.1",
     "core-js": "^2.4.1",
     "jquery": "3.1.1",
     "jquery-form": "3.50.0",
@@ -34,6 +37,7 @@
     "ng2-pdf-viewer": "^1.0.2",
     "pdfjs-dist": "^1.7.365",
     "reflect-metadata": "^0.1.8",
+    "rx": "^4.1.0",
     "rxjs": "5.0.1",
     "swiper": "3.4.1",
     "systemjs": "0.19.40",
